--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         </section>
               <section class= "img">
             <div>
-              <img src="proj1.png"  height="350" width="350">
+              <img src="https://i.imgur.com/4WhLrIW.png"  height="350" width="350">
             </div>
                 <div>
 <span>Tasks JS To-do List Web Application
 Ability to add, remove, toggle complete as well as toggle all items complete or incomplete.
-Ability to reset the list. Created at the FSU Hackathon ’19
+Ability to reset the list. Created at the FSU Hackathon â€™19
                   </span>
                 </div>
                 <div>
-              <img src="proj2.png" height="350" width="350">
+              <img src="https://i.imgur.com/nUPRuFi.png" height="350" width="350">
                 </div>
                 <div>
 <span>  Pixel Art Maker Canvas Design Web App
