--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+    
 <!DOCTYPE HTML>
 <html>
 	<head>
@@ -26,7 +27,7 @@
                 <div>
 <span>Tasks JS To-do List Web Application
 Ability to add, remove, toggle complete as well as toggle all items complete or incomplete.
-Ability to reset the list. Created at the FSU Hackathon â€™19
+Ability to reset the list. Created at the FSU Hackathon ’19
                   </span>
                 </div>
                 <div>
